--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,34 @@
-/*  your css code here. If applicable */
-.container{
-	width:70vw;
-	height:25vh;
-	background-color:gray;
-	border-radius:15px;
-	border:2px solid black;
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	gap:2vw
-	
-	
+.container {
+  width: 70vw;
+  height: 25vh;
+  background-color: gray;
+  border-radius: 15px;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2vw;
 }
 
-#green{
-	background-color:green;width:12vw;
-	height:15vh;
-	border-radius:100%;
-	border:1px solid black;
+#green {
+  background-color: green;
+  width: 12vw;
+  height: 15vh;
+  border-radius: 100%;
+  border: 1px solid black;
 }
-#yellow{
-	background-color:yellow;
-	width:12vw;
-	height:15vh;
-	border-radius:100%;
-	
+
+#yellow {
+  background-color: yellow;
+  width: 12vw;
+  height: 15vh;
+  border-radius: 100%;
 }
-#red{
-	background-color:red;
-	width:12vw;
-	height:15vh;
-	border-radius:100%;
-	text-align:center;
+
+#red {
+  background-color: red;
+  width: 12vw;
+  height: 15vh;
+  border-radius: 100%;
+  text-align: center;
 }
